# spec_drift_agent

./: .gitignore  LICENSE  README.md  implementation_plan.md  pyproject.toml  walkthrough.md
.github/workflows/: ci.yml  release.yml
src/specdrift/: __init__.py  cli.py  types.py
src/specdrift/modules/: __init__.py  decision_engine.py  openapi_parser.py  pipeline.py  request_executor.py  spec_updater.py
src/specdrift/modules/diff_engine/: __init__.py
src/specdrift/modules/diff_engine/detectors/: __init__.py  additional_detector.py  enum_detector.py  required_detector.py  status_detector.py  type_detector.py
src/specdrift/modules/semantic_reconciler/: __init__.py  llm_client.py  prompt_builder.py
test_api/: main.py  openapi_spec.yaml  scenarios.md
tests/integration/: test_openapi_parser.py
tests/unit/: test_diff_engine.py
